# ekoi-backend-new-new

./: .env.example  .gitignore  API_DOCUMENTATION.md  COMPLETE_API_REFERENCE.md  JD_UPLOAD_API_DOCUMENTATION.md  README.md  SCORING_CALCULATION_EXPLAINED.py  SECURITY_NOTICE.md  SLACK_INTEGRATION_README.md  WORKFLOW_DOCUMENTATION.md  clean_duplicates.py  cleanup_stale_vectors.py  cleanup_vectors.py  comprehensive_api_test.py  debug_session_storage.py  detailed_scoring_example.py  main.py  pyproject.toml  reindex_resumes.py  simple_test.py  test_api_search.py  test_api_shortlisting.py  test_complete_jd_workflow.py  test_datascience_jd.txt  test_duplicate_prevention.py  test_duplication_issue.py  test_fix_verification.py  test_jd_download_functionality.py  test_jd_shortlisting_fix.py  test_jd_upload_api.py  test_jd_workflow_complete.py  test_new_resume.txt  test_no_duplicates.py  test_openai_integration.py  test_slack_env_variable.py  test_upload_process.py  test_weightage_system.py  verify_shortlisting_fix.py
.github/: copilot-instructions.md
job_descriptions/: 20250814_112720_eb5a6eec-8f95-4cb0-82af-84f685b74414_senior_python_engineer.txt  20250814_113812_deefad43-a523-4838-a83e-e7e9ba7d1b1c_senior_fullstack_developer.txt  20250814_120401_55c3d21a-ed47-40da-ac2b-43f72ce419ee_senior_python_developer.txt  20250815_032002_9b0a288d-1432-406e-a922-6f3db3b07693_test_jd.txt  20250815_032416_672f2249-b44b-4ad0-827d-5d4f726c425c_test_frontend_jd.txt  20250815_032625_e90c347f-5151-45fc-b244-d0d6f200585d_test_job_description.txt  (+1 more)
resumes/: 20250813_062211_test_resume.txt  (+7 more)
(+37 files in other folders)
