[project]
name = "ekoi-backend"
version = "0.1.0"
description = "Resume parser and indexer that extracts key information from resumes and stores it in a vector database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pinecone>=4.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.8.0",
    "pymongo>=4.8.0",
    "motor>=3.5.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "certifi>=2025.8.3",
]
